feat: Implement waitlist form, add new static pages, and introduce core UI components

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -82,5 +82,64 @@
     "select": "Language",
     "en": "English",
     "es": "Español"
+  },
+  "waitlist": {
+    "title": "Join the Waitlist",
+    "subtitle": "Take control of your health — comprehensive testing with personalized insights.",
+    "whatsIncluded": "What's included",
+    "feature1": "100+ biomarkers tested",
+    "feature2": "Personalized insights from physicians",
+    "feature3": "Comprehensive health summary",
+    "feature4": "Results tracked over your lifetime",
+    "reachUs": "Or reach us directly",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "email": "Email Address",
+    "phone": "Phone Number",
+    "dob": "Date of Birth",
+    "healthIssues": "Current Health Issues or Concerns",
+    "healthIssuesPlaceholder": "Please describe any current health issues, conditions, or symptoms you're experiencing...",
+    "healthGoals": "Health Goals",
+    "healthGoalsPlaceholder": "What are your health and wellness goals? What do you hope to achieve with comprehensive testing?",
+    "message": "Additional Message",
+    "messagePlaceholder": "Any additional information you'd like to share with our team (optional)",
+    "submit": "Join the Waitlist",
+    "submitting": "Submitting...",
+    "successTitle": "You're on the list!",
+    "successMessage": "Thank you for joining our waitlist. Our team will review your information and contact you soon to schedule your health assessment.",
+    "submitAnother": "Submit another response",
+    "privacy": "By submitting this form, you agree to our",
+    "privacyLink": "Privacy Policy",
+    "privacyConsent": "and consent to receive communications from Health Centric about your health assessment."
+  },
+  "contact": {
+    "title": "Get in touch",
+    "subtitle": "Have a question or want to learn more? We'd love to hear from you.",
+    "name": "Full name",
+    "namePlaceholder": "John Doe",
+    "email": "Email address",
+    "emailPlaceholder": "john@example.com",
+    "phone": "Phone number (optional)",
+    "phonePlaceholder": "+1 (555) 000-0000",
+    "message": "Message",
+    "messagePlaceholder": "How can we help you?",
+    "submit": "Send message",
+    "submitting": "Sending...",
+    "error": "Something went wrong. Please try again.",
+    "required": "This field is required",
+    "validEmail": "Please enter a valid email",
+    "agreements": "Please review and accept the following",
+    "agreeTerms": "I agree to Health Centric's",
+    "termsLink": "Terms of Service",
+    "and": "and",
+    "privacyLink": "Privacy Policy",
+    "agreeAuthorization": "I agree to Health Centric's",
+    "authorizationLink": "Authorization for Use of Medical Information",
+    "agreeLabResults": "I agree to Health Centric's",
+    "labResultsLink": "Request for Lab Results",
+    "agreeError": "Please accept all agreements to continue",
+    "successTitle": "Message sent",
+    "successMessage": "Thank you for reaching out. We'll get back to you within 24 hours.",
+    "backHome": "Back to home"
   }
 }
