--- a/app/i18n/locales/es.json
+++ b/app/i18n/locales/es.json
@@ -82,5 +82,64 @@
     "select": "Idioma",
     "en": "English",
     "es": "Español"
+  },
+  "waitlist": {
+    "title": "Únete a la lista de espera",
+    "subtitle": "Toma el control de tu salud — análisis completo con información personalizada.",
+    "whatsIncluded": "Qué incluye",
+    "feature1": "Más de 100 biomarcadores analizados",
+    "feature2": "Información personalizada de médicos",
+    "feature3": "Resumen completo de salud",
+    "feature4": "Resultados rastreados de por vida",
+    "reachUs": "O contáctanos directamente",
+    "firstName": "Nombre",
+    "lastName": "Apellido",
+    "email": "Correo electrónico",
+    "phone": "Número de teléfono",
+    "dob": "Fecha de nacimiento",
+    "healthIssues": "Problemas de salud actuales",
+    "healthIssuesPlaceholder": "Por favor describe cualquier problema de salud, condición o síntoma que estés experimentando...",
+    "healthGoals": "Objetivos de salud",
+    "healthGoalsPlaceholder": "¿Cuáles son tus objetivos de salud y bienestar? ¿Qué esperas lograr con un análisis completo?",
+    "message": "Mensaje adicional",
+    "messagePlaceholder": "Cualquier información adicional que quieras compartir con nuestro equipo (opcional)",
+    "submit": "Unirme a la lista",
+    "submitting": "Enviando...",
+    "successTitle": "¡Estás en la lista!",
+    "successMessage": "Gracias por unirte a nuestra lista de espera. Nuestro equipo revisará tu información y te contactará pronto para programar tu evaluación de salud.",
+    "submitAnother": "Enviar otra respuesta",
+    "privacy": "Al enviar este formulario, aceptas nuestra",
+    "privacyLink": "Política de Privacidad",
+    "privacyConsent": "y consientes recibir comunicaciones de Health Centric sobre tu evaluación de salud."
+  },
+  "contact": {
+    "title": "Contáctanos",
+    "subtitle": "¿Tienes alguna pregunta o quieres saber más? Nos encantaría escucharte.",
+    "name": "Nombre completo",
+    "namePlaceholder": "Juan Pérez",
+    "email": "Correo electrónico",
+    "emailPlaceholder": "juan@ejemplo.com",
+    "phone": "Teléfono (opcional)",
+    "phonePlaceholder": "+1 (555) 000-0000",
+    "message": "Mensaje",
+    "messagePlaceholder": "¿Cómo podemos ayudarte?",
+    "submit": "Enviar mensaje",
+    "submitting": "Enviando...",
+    "error": "Algo salió mal. Por favor, intenta de nuevo.",
+    "required": "Este campo es obligatorio",
+    "validEmail": "Por favor, ingresa un correo válido",
+    "agreements": "Por favor, revisa y acepta lo siguiente",
+    "agreeTerms": "Acepto los",
+    "termsLink": "Términos de Servicio",
+    "and": "y la",
+    "privacyLink": "Política de Privacidad",
+    "agreeAuthorization": "Acepto la",
+    "authorizationLink": "Autorización para Uso de Información Médica",
+    "agreeLabResults": "Acepto la",
+    "labResultsLink": "Solicitud de Resultados de Laboratorio",
+    "agreeError": "Por favor, acepta todos los acuerdos para continuar",
+    "successTitle": "Mensaje enviado",
+    "successMessage": "Gracias por contactarnos. Te responderemos en las próximas 24 horas.",
+    "backHome": "Volver al inicio"
   }
 }
