feat: Internationalize value proposition test categories and biomarker listings.

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -39,7 +39,33 @@
   },
   "valueProposition": {
     "title": "What we test",
-    "subtitle": "100+ biomarkers across the areas that matter most to your long-term health."
+    "subtitle": "100+ biomarkers across the areas that matter most to your long-term health.",
+    "biomarkers": "Biomarkers",
+    "more": "+More",
+    "moreText": "Complete health in one test",
+    "cat1Title": "Thyroid & hormones",
+    "cat1Test1": "TSH (Thyroid Stimulating)",
+    "cat1Test2": "Free T3 & T4",
+    "cat1Test3": "Testosterone Panel",
+    "cat1Test4": "Estradiol & Progesterone",
+    "cat2Title": "Early risk detection",
+    "cat2Test1": "Multi-Cancer Screening",
+    "cat2Test2": "PSA (Prostate Health)",
+    "cat2Test3": "CA-125 (Ovarian)",
+    "cat2Test4": "Heavy Metals Panel",
+    "cat3Title": "Heart & metabolism",
+    "cat3Test1": "Advanced Lipid Panel",
+    "cat3Test2": "Lp(a) Cardiovascular",
+    "cat3Test3": "ApoB & ApoA1 Ratio",
+    "cat3Test4": "HbA1c & Fasting Glucose",
+    "cat4Title": "Longevity markers",
+    "cat4Test1": "IGF-1 (Growth Factor)",
+    "cat4Test2": "DHEA-S (Adrenal Health)",
+    "cat4Test3": "Homocysteine Levels",
+    "cat5Title": "Brain & stress",
+    "cat5Test1": "Cortisol (AM/PM)",
+    "cat5Test2": "hs-CRP Inflammation",
+    "cat5Test3": "Vitamin B12 & Folate"
   },
   "testimonials": {
     "title": "Trusted by",
