--- a/app/i18n/locales/es.json
+++ b/app/i18n/locales/es.json
@@ -39,7 +39,33 @@
   },
   "valueProposition": {
     "title": "Qué analizamos",
-    "subtitle": "Más de 100 biomarcadores en las áreas más importantes para tu salud a largo plazo."
+    "subtitle": "Más de 100 biomarcadores en las áreas más importantes para tu salud a largo plazo.",
+    "biomarkers": "Biomarcadores",
+    "more": "+Más",
+    "moreText": "Salud completa en un solo análisis",
+    "cat1Title": "Tiroides y hormonas",
+    "cat1Test1": "TSH (Estimulante de Tiroides)",
+    "cat1Test2": "T3 y T4 Libre",
+    "cat1Test3": "Panel de Testosterona",
+    "cat1Test4": "Estradiol y Progesterona",
+    "cat2Title": "Detección temprana de riesgo",
+    "cat2Test1": "Detección Multi-Cáncer",
+    "cat2Test2": "PSA (Salud Prostática)",
+    "cat2Test3": "CA-125 (Ovárico)",
+    "cat2Test4": "Panel de Metales Pesados",
+    "cat3Title": "Corazón y metabolismo",
+    "cat3Test1": "Panel Lipídico Avanzado",
+    "cat3Test2": "Lp(a) Cardiovascular",
+    "cat3Test3": "Proporción ApoB y ApoA1",
+    "cat3Test4": "HbA1c y Glucosa en Ayunas",
+    "cat4Title": "Marcadores de longevidad",
+    "cat4Test1": "IGF-1 (Factor de Crecimiento)",
+    "cat4Test2": "DHEA-S (Salud Adrenal)",
+    "cat4Test3": "Niveles de Homocisteína",
+    "cat5Title": "Cerebro y estrés",
+    "cat5Test1": "Cortisol (AM/PM)",
+    "cat5Test2": "hs-CRP Inflamación",
+    "cat5Test3": "Vitamina B12 y Folato"
   },
   "testimonials": {
     "title": "Confiado por",
