feat: update hero section headlines and descriptions across all locales.

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -11,9 +11,9 @@
   },
   "hero": {
     "eyebrow": "Advanced preventive care",
-    "headline1": "Catch what your doctor",
-    "headline2": "might miss.",
-    "description": "Test 100+ biomarkers from home. Detect early signs of disease before symptoms appear. Get results in 48 hours with clear next steps.",
+    "headline1": "Your health",
+    "headline2": "dashboard",
+    "description": "Test 100+ biomarkers from comfort of your home or a lab near you. Detect early signs of disease before symptoms appear. Get results in 48 hours with clear next steps.",
     "cta": "Start your test",
     "ctaSecondary": "See what we test",
     "trustClia": "CLIA Certified Labs",
