--- a/app/i18n/locales/es.json
+++ b/app/i18n/locales/es.json
@@ -11,9 +11,9 @@
   },
   "hero": {
     "eyebrow": "Atención preventiva avanzada",
-    "headline1": "Detecta lo que tu médico",
-    "headline2": "podría pasar por alto.",
-    "description": "Analiza más de 100 biomarcadores desde casa. Detecta señales tempranas de enfermedad antes de los síntomas. Resultados en 48 horas con pasos claros a seguir.",
+    "headline1": "Tu panel de",
+    "headline2": "salud",
+    "description": "Analiza más de 100 biomarcadores desde la comodidad de tu casa o en un laboratorio cercano. Detecta señales tempranas de enfermedad antes de los síntomas. Resultados en 48 horas con pasos claros a seguir.",
     "cta": "Comienza tu análisis",
     "ctaSecondary": "Ver qué analizamos",
     "trustClia": "Laboratorios certificados CLIA",
