--- a/app/i18n/locales/fr.json
+++ b/app/i18n/locales/fr.json
@@ -11,9 +11,9 @@
   },
   "hero": {
     "eyebrow": "Soins préventifs avancés",
-    "headline1": "Détectez ce que votre médecin",
-    "headline2": "pourrait manquer.",
-    "description": "Testez plus de 100 biomarqueurs à domicile. Détectez les signes précoces de maladie avant l'apparition des symptômes. Résultats en 48 heures avec des recommandations claires.",
+    "headline1": "Votre tableau de",
+    "headline2": "santé",
+    "description": "Testez plus de 100 biomarqueurs depuis le confort de votre domicile ou dans un laboratoire près de chez vous. Détectez les signes précoces de maladie avant l'apparition des symptômes. Résultats en 48 heures avec des recommandations claires.",
     "cta": "Commencer le test",
     "ctaSecondary": "Voir nos tests",
     "trustClia": "Laboratoires certifiés CLIA",
