--- a/app/i18n/locales/pt.json
+++ b/app/i18n/locales/pt.json
@@ -11,9 +11,9 @@
   },
   "hero": {
     "eyebrow": "Cuidados preventivos avançados",
-    "headline1": "Descubra o que seu médico",
-    "headline2": "pode não ver.",
-    "description": "Analise mais de 100 biomarcadores sem sair de casa. Detecte sinais precoces de doenças antes dos sintomas. Resultados em 48 horas com orientações claras.",
+    "headline1": "Seu painel de",
+    "headline2": "saúde",
+    "description": "Analise mais de 100 biomarcadores no conforto da sua casa ou em um laboratório perto de você. Detecte sinais precoces de doenças antes dos sintomas. Resultados em 48 horas com orientações claras.",
     "cta": "Começar meu teste",
     "ctaSecondary": "Ver o que testamos",
     "trustClia": "Laboratórios certificados CLIA",
