feat: Update trustHipaa localization string from HIPAA to MINSA across all locales.

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -17,7 +17,7 @@
     "cta": "Start your test",
     "ctaSecondary": "See what we test",
     "trustClia": "CLIA Certified Labs",
-    "trustHipaa": "HIPAA Compliant",
+    "trustHipaa": "MINSA Certified",
     "trustHsa": "HSA/FSA Eligible",
     "scroll": "Scroll"
   },
