--- a/app/i18n/locales/es.json
+++ b/app/i18n/locales/es.json
@@ -17,7 +17,7 @@
     "cta": "Comienza tu análisis",
     "ctaSecondary": "Ver qué analizamos",
     "trustClia": "Laboratorios certificados CLIA",
-    "trustHipaa": "Cumple con HIPAA",
+    "trustHipaa": "Certificado MINSA",
     "trustHsa": "Elegible para HSA/FSA",
     "scroll": "Desplazar"
   },
