--- a/app/i18n/locales/fr.json
+++ b/app/i18n/locales/fr.json
@@ -17,7 +17,7 @@
     "cta": "Commencer le test",
     "ctaSecondary": "Voir nos tests",
     "trustClia": "Laboratoires certifiés CLIA",
-    "trustHipaa": "Conforme HIPAA",
+    "trustHipaa": "Certifié MINSA",
     "trustHsa": "Éligible HSA/FSA",
     "scroll": "Défiler"
   },
