--- a/app/i18n/locales/pt.json
+++ b/app/i18n/locales/pt.json
@@ -17,7 +17,7 @@
     "cta": "Começar meu teste",
     "ctaSecondary": "Ver o que testamos",
     "trustClia": "Laboratórios certificados CLIA",
-    "trustHipaa": "Conforme HIPAA",
+    "trustHipaa": "Certificado MINSA",
     "trustHsa": "Elegível HSA/FSA",
     "scroll": "Rolar"
   },
